<resources>
    <string name="app_name">Work Tracking</string>
    <string name="Title">Title</string>
    <string name="BackIcon">Back Icon</string>
    <!-- Main Page -->
    <string name="CreateAccount">Create Account</string>
    <string name="ResetPassword">ResetPassword</string>
    <string name="SignIn">Sign In</string>
    <!-- SignIn Page -->
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="ForgotPassword" translatable="true">Forgot password? Reset Password</string>
    <!-- CreateAccount Page -->
    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="Finish">Finish</string>
    <string name="Loading">Loading</string>
    <string name="MinimumChars">Required minimum 6 chars</string>
    <string name="InvalidEmail">Invalid Email</string>
    <string name="InvalidPassword">Invalid Password</string>
    <string name="EmailExist">Email exist in the system</string>
    <string name="ErrorMSG">Something went wrong please try again in a few minutes.</string>
    <string name="Error">Error</string>
    <string name="OK">OK</string>
    <string name="CANCEL">CANCEL</string>
    <string name="CompleteCreateAccount">Successfully registered, Please verify your email with link sent to your email.</string>
    <string name="CheckEmailVerify">This account not verify yet, please check the link sent to your email to verify this account.</string>
    <string name="WrongPassword">Wrong Password</string>
    <string name="EmailNotExist">Email not exist in the system</string>
    <string name="Required">Required</string>
    <!-- ResetPassword Page -->
    <string name="ForgotPasswordInfo" translatable="true">Please enter the email address which you want to reset the password.</string>
    <string name="ResetLink" translatable="true">Reset Link has been send to your Email.</string>
    <!-- Home Page -->
    <string name="Home">Home</string>
    <string name="AddDate">Add Date</string>
    <string name="RemoveDate">Remove Date</string>
    <string name="SignOut" translatable="true">Sign Out</string>
    <string name="Yes" translatable="true">Yes</string>
    <string name="No" translatable="true">No</string>
    <string name="NumberOfMonths" translatable="true">Months i worked:</string>
    <string name="NumberOfDays" translatable="true">Days i worked:</string>
    <string name="AreYouSure" translatable="true">Are you sure you want to Sign Out?</string>
    <string name="January" translatable="true">January</string>
    <string name="February" translatable="true">February</string>
    <string name="March" translatable="true">March</string>
    <string name="April" translatable="true">April</string>
    <string name="May" translatable="true">מאי</string>
    <string name="June" translatable="true">June</string>
    <string name="July" translatable="true">July</string>
    <string name="August" translatable="true">August</string>
    <string name="September" translatable="true">September</string>
    <string name="October" translatable="true">October</string>
    <string name="November" translatable="true">November</string>
    <string name="December" translatable="true">December</string>
    <string name="Date" translatable="true">Date</string>
    <string name="Year" translatable="true">Year</string>
    <string name="Month" translatable="true">Month</string>
    <string name="Select" translatable="true">Select</string>
    <string name="Search" translatable="true">Search</string>
    <string name="Company" translatable="true">Company</string>
    <string name="StartTime" translatable="true">Start Time</string>
    <string name="EndTime" translatable="true">End Time</string>
    <string name="HourError" translatable="true">Hours Pick Error(range 00 - 24)</string>
    <string name="MinutesError" translatable="true">Minutes Pick Error(range 00 - 59)</string>
    <string name="TimePickError" translatable="true">Time Pick Error(range 00:00 - 24:00)</string>
    <string name="StartTimeError" translatable="true">Start Time Error</string>
    <string name="TotalWorkTime" translatable="true">Total Work Time</string>
    <string name="Add" translatable="true">Add</string>
    <string name="Cancel" translatable="true">Cancel</string>
    <string name="Remove" translatable="true">Remove</string>
    <string name="Edit" translatable="true">Edit</string>
    <string name="InvalidDate" translatable="true">Invalid date</string>
    <string name="Hours" translatable="true">Hours</string>
    <string name="Minutes" translatable="true">Minutes</string>

    <string-array name="Months">
        <item>@string/January</item>
        <item>@string/February</item>
        <item>@string/March</item>
        <item>@string/April</item>
        <item>@string/May</item>
        <item>@string/June</item>
        <item>@string/July</item>
        <item>@string/August</item>
        <item>@string/September</item>
        <item>@string/October</item>
        <item>@string/November</item>
        <item>@string/December</item>
    </string-array>
</resources>