<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/blue"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        style="@style/HeaderView"
        android:id="@+id/AppName"
        android:text="@string/app_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/TitleView"
        android:id="@+id/Title"
        android:text="@string/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/AppName"
        app:layout_constraintStart_toStartOf="@+id/AppName"
        app:layout_constraintTop_toBottomOf="@+id/AppName" />

    <ImageView
        android:id="@+id/BackIcon"
        android:padding="20dp"
        android:src="@drawable/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/AppName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/AppName"
        android:contentDescription="@string/BackIcon" />

</androidx.constraintlayout.widget.ConstraintLayout>