<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="11dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp"
        app:cardCornerRadius="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/floatingActionButtonEdit"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:gravity="center"
                android:src="@drawable/remove"
                android:text="@string/Edit"
                android:textAllCaps="false"
                android:textSize="14sp"
                android:textStyle="bold"
                android:visibility="invisible"
                app:icon="@drawable/edit"
                app:iconPadding="2dp"
                app:iconSize="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/CompanyName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:padding="1dp"
                android:text="@string/Company"
                android:textSize="26sp"
                android:textColor="@color/default_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/floatingActionButtonEdit"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/Date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:text="@string/Date"
                android:textSize="20dp"
                android:textColor="@color/default_color"
                app:layout_constraintStart_toStartOf="@+id/CompanyName"
                app:layout_constraintTop_toBottomOf="@+id/CompanyName" />

            <TextView
                android:id="@+id/StartTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:text="@string/StartTime"
                android:textSize="20dp"
                android:textColor="@color/default_color"
                app:layout_constraintStart_toStartOf="@+id/Date"
                app:layout_constraintTop_toBottomOf="@+id/Date" />

            <TextView
                android:id="@+id/EndTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:text="@string/EndTime"
                android:textSize="20dp"
                android:textColor="@color/default_color"
                app:layout_constraintStart_toStartOf="@+id/StartTime"
                app:layout_constraintTop_toBottomOf="@+id/StartTime" />

            <TextView
                android:id="@+id/TotalWorkTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:text="@string/TotalWorkTime"
                android:textSize="20dp"
                android:textColor="@color/default_color"
                app:layout_constraintStart_toStartOf="@+id/EndTime"
                app:layout_constraintTop_toBottomOf="@+id/EndTime" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>