<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/grey"
    tools:context=".Guest.CreateAccount">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/grey">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginLeft="11dp"
            android:layout_marginRight="11dp"
            android:layout_marginTop="11dp"
            android:layout_marginBottom="11dp"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:layout_gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fillViewport="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="10dp"
                        android:orientation="vertical">

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/TextInputLayout_Style"
                            android:id="@+id/TextInputLayoutFirstName"
                            android:layout_width="match_parent"
                            android:layout_height="90dp"
                            android:layout_marginTop="10dp"
                            android:hint="@string/FirstName"
                            app:endIconMode="clear_text"
                            app:startIconDrawable="@drawable/person">

                            <com.google.android.material.textfield.TextInputEditText
                                style="@style/TextInputEditText_Style"
                                android:id="@+id/TextInputEditTextInputFirstName"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textPersonName" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/TextInputLayout_Style"
                            android:id="@+id/TextInputLayoutLastName"
                            android:layout_width="match_parent"
                            android:layout_height="90dp"
                            android:layout_marginTop="4dp"
                            android:hint="@string/LastName"
                            app:endIconMode="clear_text"
                            app:startIconDrawable="@drawable/person">

                            <com.google.android.material.textfield.TextInputEditText
                                style="@style/TextInputEditText_Style"
                                android:id="@+id/TextInputEditTextInputLastName"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textPersonName" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/TextInputLayout_Style"
                            android:id="@+id/TextInputLayoutEmail"
                            android:layout_width="match_parent"
                            android:layout_height="90dp"
                            android:layout_marginTop="4dp"
                            android:hint="@string/Email"
                            app:endIconMode="clear_text"
                            app:startIconDrawable="@drawable/email">

                            <com.google.android.material.textfield.TextInputEditText
                                style="@style/TextInputEditText_Style"
                                android:id="@+id/TextInputEditTextInputEmail"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textEmailAddress" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/TextInputLayout_Style"
                            android:id="@+id/TextInputLayoutPassword"
                            android:layout_width="match_parent"
                            android:layout_height="90dp"
                            android:layout_marginTop="4dp"
                            android:hint="@string/Password"
                            app:endIconMode="password_toggle"
                            app:startIconDrawable="@drawable/password">

                            <com.google.android.material.textfield.TextInputEditText
                                style="@style/TextInputEditText_Style"
                                android:id="@+id/TextInputEditTextInputPassword"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textPassword" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/TextInputLayout_Style"
                            android:id="@+id/TextInputLayoutPasswordConfirm"
                            android:layout_width="match_parent"
                            android:layout_height="90dp"
                            android:layout_marginTop="4dp"
                            android:hint="@string/ConfirmPassword"
                            app:endIconMode="password_toggle"
                            app:startIconDrawable="@drawable/password">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/TextInputEditTextInputPasswordConfirm"
                                style="@style/TextInputEditText_Style"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textPassword" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <Button
                            style="@style/Button_Style"
                            android:id="@+id/ButtonNext"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/Finish" />
                    </LinearLayout>
                </ScrollView>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>